sorcery:  Fix sorcery_wizard_create so it creates in caches

Although sorcery_wizard_update and sorcery_wizard_delete operated on
caches, sorcery_memory_create didn't.  It looks like this was just a
mis-ordering of the return conditional predicates rather than a specific
exclusion.

This issue was preventing contacts from getting added to a memory_cache
when they were created.

ASTERISK-25811 #close
Reported-by: Ross Beer

Change-Id: Id5596ce691685a79886e57b0865888458d6e7b46